@@ -1031,6 +1031,16 @@ unduper_script <PATH>
 	Enter the name of the script doing the actual unduping of the file.
 	Default: "/bin/ng-undupe"
 
+enable_sample_script <TRUE|FALSE>
+	Should a script be executed after sample uploads? Only valid on uploads
+	in sample dirs (see sample_list for info), and only if file is a
+	video file.
+	Default: FALSE
+
+sample_script <PATH>
+	Enter the name of the script you wish to execute on sample uploads.
+	Default: "/bin/sample_script.sh"
+
 disable_audio_race <TRUE|FALSE>
 	You can choose to disable some announces. Set to TRUE to disable the
 	announce.
